# sthenauth

./: .envrc  .gitignore  Account.hs  Action.hs  Admin.hs  AuthN.hs  Boot.hs  Byline.hs  Capabilities.hs  Certificate.hs  Command.hs  Config.hs  Elm.hs  Encoding.hs  Error.hs  Event.hs  EventDetail.hs  HTTP.hs  Handlers.hs  Helpers.hs  IO.hs  Info.hs  Init.hs  JWK.hs  Log.hs  Middleware.hs  Monad.hs  Options.hs  Policy.hs  PostLogin.hs  Provider.hs  Public.hs  README.md  Remote.hs  Routes.hs  Runtime.hs  Server.hs  Session.hs  Site.hs  TLS.hs  (+7 more)
Helpers/: Byline.hs  Email.hs  Password.hs
Local/: LocalAccount.hs  Login.hs  Password.hs  Provider.hs
OIDC/: Account.hs  AuthN.hs  Carrier.hs  Cookie.hs  Effect.hs  Flow.hs  Known.hs  Provider.hs  Public.hs  Session.hs  Token.hs
nix/: nix-hs.nix  nixpkgs.nix  overlay.nix  overrides-sans-sthenauth.nix  overrides.nix  sources.json
schema/: 20190424T153507-update-trigger.sql  20190424T153508-create-keyuse.sql  20190424T153509-create-sites.sql  20190424T153510-create-accounts.sql  20190503T090131-create-emails.sql  20191005T114302-create-sessions.sql
src/Sthenauth/: Effect.hs
src/Sthenauth/Core/: Account.hs  Action.hs  Address.hs  Admin.hs  AuthN.hs  Capabilities.hs  Client.hs  Config.hs  Crypto.hs  CurrentUser.hs  Email.hs  Error.hs  Event.hs  EventDetail.hs  HTTP.hs  Info.hs  JWK.hs  Policy.hs  Public.hs  Remote.hs  Runtime.hs  Session.hs  Site.hs  URL.hs
src/Sthenauth/Effect/: Carrier.hs
src/Sthenauth/Providers/: OIDC.hs
src/Sthenauth/Providers/Local/: Account.hs  LocalAccount.hs  Login.hs  Password.hs  Provider.hs
src/Sthenauth/Providers/OIDC/: Account.hs  AuthN.hs  Cookie.hs  Known.hs  Provider.hs  Token.hs
sthenauth/: .envrc  default.nix  hie.yaml  sthenauth.cabal
sthenauth-certauth/: .envrc  default.nix  sthenauth-certauth.cabal
sthenauth-certauth/schema/: 20200109T110612-create-certificates.sql
sthenauth-certauth/src/Sthenauth/CertAuth/: Carrier.hs  Certificate.hs  Config.hs  Effect.hs  TLS.hs
sthenauth-cli/: .envrc  Setup.hs  default.nix  hie.yaml  sthenauth-cli.cabal
sthenauth-cli/app/: Main.hs
sthenauth-cli/src/Sthenauth/Shell/: Action.hs  Admin.hs  AuthN.hs  Boot.hs  Byline.hs  Commands.hs  Elm.hs  Helpers.hs  IO.hs  Info.hs  Init.hs  Options.hs  Policy.hs  Provider.hs  Server.hs  Site.hs
sthenauth-daemon/: .envrc  default.nix  hie.yaml  sthenauth-daemon.cabal
sthenauth-daemon/app/: Main.hs
sthenauth-daemon/scripts/: create-migration.sh  reset.sh
sthenauth-daemon/test/integration/: default.nix  service.nix  test.sh
sthenauth-servant/: .envrc  default.nix  hie.yaml  sthenauth-servant.cabal
sthenauth-servant/src/Sthenauth/API/: Handlers.hs  Log.hs  Middleware.hs  Monad.hs  Routes.hs  Server.hs
sthenauth-server/app/: Main.hs
sthenauth-server/config/: default.yml  oidc-providers.yml
sthenauth-server/scripts/: reset.sh
sthenauth-server/test/: Main.hs  script.http
sthenauth-server/test/integration/: default.nix  service.nix  test.sh
sthenauth/schema/: 20190424T153509-create-sites.sql  20190424T153510-create-accounts.sql  20190503T090131-create-emails.sql  20190510T131406-create-events.sql  20190624T144210-create-admins.sql  20191005T114302-create-sessions.sql  20200207T090749-create-provider-openidconnect.sql
sthenauth/src/Sthenauth/: Effect.hs
sthenauth/src/Sthenauth/Core/: Account.hs  Address.hs  Admin.hs  AuthN.hs  Bearer.hs  Config.hs  Crypto.hs  CurrentUser.hs  Database.hs  Email.hs  Encoding.hs  Error.hs  Event.hs  EventDetail.hs  Logger.hs  Maintenance.hs  Policy.hs  Provider.hs  Session.hs  Site.hs  URL.hs  Username.hs
sthenauth/src/Sthenauth/Effect/: Algebra.hs  Boot.hs  Carrier.hs  Runtime.hs
sthenauth/src/Sthenauth/Providers/: Local.hs
sthenauth/src/Sthenauth/Providers/Local/: Account.hs  Password.hs  Provider.hs
sthenauth/src/Sthenauth/Providers/OIDC/: Account.hs  AuthN.hs  Cookie.hs  Known.hs  Provider.hs  Public.hs
sthenauth/test/: EmailTest.hs  Main.hs
