cabal-version: 2.2

--------------------------------------------------------------------------------
name:          sthenauth-certauth
version:       0.1.0
synopsis:      Certificate authority for Sthenauth
description:   For more details please see the README.md file.
license:       Apache-2.0
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019-2020 Peter Jones
category:      Authentication Cryptography Web
tested-with:   GHC == 8.6.5
build-type:    Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  schema/*.sql

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                 >= 4.9  && < 5.0
               , aeson                >= 1.3  && < 1.5
               , data-default-class   >= 0.1  && < 0.2
               , filepath             >= 1.4  && < 1.5
               , fused-effects        >= 1.0  && < 1.1
               , fused-effects-relude >= 0.1  && < 0.2
               , iolaus-crypto        >= 0.1  && < 0.2
               , iolaus-opaleye       >= 0.1  && < 0.2
               , lens                 >= 4.0  && < 5.0
               , opaleye              >= 0.6  && < 0.7
               , pem                  >= 0.2  && < 0.3
               , postgresql-simple    >= 0.5  && < 0.7
               , product-profunctors  >= 0.10 && < 0.11
               , profunctors          >= 5.3  && < 5.6
               , random               >= 1.1  && < 1.2
               , sthenauth            >= 0.1  && < 0.2
               , time                 >= 1.8  && < 2.0
               , tls                  >= 1.5  && < 1.6
               , uuid                 >= 1.3  && < 1.4
               , warp-tls             >= 3.2  && < 3.3
               , x509                 >= 1.7  && < 1.8

  mixins: base hiding (Prelude)
        , fused-effects-relude (FusedRelude as Prelude)

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Sthenauth.CertAuth.Carrier
    Sthenauth.CertAuth.Certificate
    Sthenauth.CertAuth.Config
    Sthenauth.CertAuth.Effect
    Sthenauth.CertAuth.TLS
  other-modules:
    Paths_sthenauth_certauth
