cabal-version: 2.2

--------------------------------------------------------------------------------
name:          sthenauth-cli
version:       0.1.0
synopsis:      Command-line interface for Sthenauth
description:   For more details please see the README.md file.
license:       Apache-2.0
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019-2020 Peter Jones
category:      Authentication Cryptography Web
tested-with:   GHC == 8.6.5
build-type:    Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                 >= 4.9  && < 5.0
               , aeson-pretty         >= 0.8  && < 0.9
               , byline               >= 0.4  && < 0.5
               , directory            >= 1.3  && < 1.4
               , ekg-core             >= 0.1  && < 0.2
               , elm-syntax           >= 0.2  && < 0.3
               , filepath             >= 1.4  && < 1.5
               , fused-effects        >= 1.0  && < 1.1
               , fused-effects-relude >= 0.1  && < 0.2
               , haskell-to-elm       >= 0.2  && < 0.3
               , iolaus-crypto        >= 0.1  && < 0.2
               , iolaus-opaleye       >= 0.1  && < 0.2
               , lens                 >= 4.0  && < 5.0
               , optparse-applicative >= 0.15 && < 0.16
               , postgresql-simple    >= 0.5  && < 0.7
               , prettyprinter        >= 1.6  && < 1.7
               , safe-exceptions      >= 0.1  && < 0.2
               , signal               >= 0.1  && < 0.2
               , sthenauth            >= 0.1  && < 0.2
               , text                 >= 1.2  && < 1.3
               , time                 >= 1.8  && < 2.0
               , unix-compat          >= 0.5  && < 0.6
               , unordered-containers >= 0.2  && < 0.3
               , yaml                 >= 0.11 && < 0.12

  mixins: base hiding (Prelude)
        , fused-effects-relude (FusedRelude as Prelude)

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Sthenauth.Shell.Admin
    Sthenauth.Shell.AuthN
    Sthenauth.Shell.Byline
    Sthenauth.Shell.Commands
    Sthenauth.Shell.Elm
    Sthenauth.Shell.Helpers
    Sthenauth.Shell.IO
    Sthenauth.Shell.Info
    Sthenauth.Shell.Init
    Sthenauth.Shell.Options
    Sthenauth.Shell.Policy
    Sthenauth.Shell.Provider
    Sthenauth.Shell.Site
  other-modules:
    Paths_sthenauth_cli

--------------------------------------------------------------------------------
executable sthenauth
  import: options, dependencies
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: sthenauth-cli
