cabal-version: 2.2

--------------------------------------------------------------------------------
name:          sthenauth-daemon
version:       0.1.0.0
synopsis:      Standalone daemon process for Sthenauth
description:   For more details please see the README.md file.
license:       Apache-2.0
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019-2020 Peter Jones
category:      Authentication Cryptography Web
tested-with:   GHC == 8.6.5
build-type:    Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                 >= 4.9  && < 5.0
               , ekg-core             >= 0.1  && < 0.2
               , filepath             >= 1.4  && < 1.5
               , fused-effects        >= 1.0  && < 1.1
               , fused-effects-relude >= 0.1  && < 0.2
               , lens                 >= 4.18 && < 4.19
               , optparse-applicative >= 0.15 && < 0.16
               , servant              >= 0.16 && < 0.17
               , servant-server       >= 0.16 && < 0.17
               , sthenauth            >= 0.1  && < 0.2
               , sthenauth-certauth   >= 0.1  && < 0.2
               , sthenauth-cli        >= 0.1  && < 0.2
               , sthenauth-servant    >= 0.1  && < 0.2
               , vault                >= 0.3  && < 0.4
               , wai                  >= 3.2  && < 3.3
               , warp                 >= 3.3  && < 3.4
               , warp-tls             >= 3.2  && < 3.3

  mixins: base hiding (Prelude)
        , fused-effects-relude (FusedRelude as Prelude)

--------------------------------------------------------------------------------
executable sthenauth
  import: options, dependencies
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules: Paths_sthenauth_daemon
