cabal-version: 2.2

--------------------------------------------------------------------------------
name:          sthenauth-servant
version:       0.1.0
synopsis:      Servant routes and handlers for Sthenauth
description:   For more details please see the README.md file.
license:       Apache-2.0
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019-2020 Peter Jones
category:      Authentication Cryptography Web
tested-with:   GHC == 8.6.5
build-type:    Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                 >= 4.9  && < 5.0
               , aeson                >= 1.3  && < 1.5
               , bytestring           >= 0.10 && < 0.11
               , cookie               >= 0.4  && < 0.5
               , fast-logger          >= 2.4  && < 3.1
               , fused-effects        >= 1.0  && < 1.1
               , fused-effects-relude >= 0.1  && < 0.2
               , http-types           >= 0.12 && < 0.13
               , iolaus-opaleye       >= 0.1  && < 0.2
               , lens                 >= 4.0  && < 5.0
               , mtl                  >= 2.2  && < 2.3
               , network              >= 3.1  && < 3.2
               , openid-connect       >= 0.1  && < 0.2
               , servant              >= 0.16 && < 0.17
               , servant-server       >= 0.16 && < 0.17
               , sthenauth            >= 0.1  && < 0.2
               , sthenauth-certauth   >= 0.1  && < 0.2
               , time                 >= 1.8  && < 2.0
               , uuid                 >= 1.3  && < 1.4
               , vault                >= 0.3  && < 0.4
               , wai                  >= 3.2  && < 3.3
               , warp                 >= 3.3  && < 3.4
               , warp-tls             >= 3.2  && < 3.3

  mixins: base hiding (Prelude)
        , fused-effects-relude (FusedRelude as Prelude)

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Sthenauth.API.Handlers
    Sthenauth.API.Log
    Sthenauth.API.Monad
    Sthenauth.API.Server
    Sthenauth.API.Middleware
    Sthenauth.API.Routes
  other-modules:
