cabal-version: 2.2

--------------------------------------------------------------------------------
name:          sthenauth
version:       0.1.0.0
synopsis:      Retire your custom authentication software and use Sthenauth instead.
description:   For more details please see the README.md file.
license:       Apache-2.0
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019-2020 Peter Jones
category:      Authentication Cryptography Web
tested-with:   GHC == 8.6.5
build-type:    Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  schema/*.sql

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-home-modules
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                 >= 4.9  && < 5.0
               , addy                 >= 0.1  && < 0.2
               , aeson                >= 1.3  && < 1.5
               , async                >= 2.2  && < 2.3
               , binary               >= 0.8  && < 1.0
               , bytestring           >= 0.10 && < 0.11
               , containers           >= 0.6  && < 0.7
               , cookie               >= 0.4  && < 0.5
               , cryptonite           >= 0.25 && < 1.0
               , directory            >= 1.3  && < 1.4
               , ekg-core             >= 0.1  && < 0.2
               , elm-syntax           >= 0.2  && < 0.3
               , fast-logger          >= 3.0  && < 3.1
               , filepath             >= 1.4  && < 1.5
               , fused-effects        >= 1.0  && < 1.1
               , fused-effects-relude >= 0.1  && < 0.2
               , generics-sop         >= 0.4  && < 0.6
               , haskell-to-elm       >= 0.2  && < 0.3
               , http-client          >= 0.6  && < 0.7
               , http-client-tls      >= 0.3  && < 0.4
               , http-types           >= 0.12 && < 0.13
               , iolaus-crypto        >= 0.1  && < 0.2
               , iolaus-opaleye       >= 0.1  && < 0.2
               , iolaus-validation    >= 0.1  && < 0.2
               , ip                   >= 1.4  && < 1.8
               , jose                 >= 0.8  && < 0.9
               , lens                 >= 4.0  && < 5.0
               , lens-aeson           >= 1.0  && < 1.2
               , memory               >= 0.14 && < 0.16
               , mtl                  >= 2.2  && < 2.3
               , network              >= 3.0  && < 3.2
               , network-uri          >= 2.6  && < 2.7
               , opaleye              >= 0.6  && < 0.7
               , openid-connect       >= 0.1  && < 0.2
               , postgresql-simple    >= 0.5  && < 0.7
               , product-profunctors  >= 0.10 && < 0.11
               , profunctors          >= 5.3  && < 5.6
               , random               >= 1.1  && < 1.2
               , relude               >= 0.6  && < 0.7
               , safe-exceptions      >= 0.1  && < 0.2
               , servant              >= 0.16 && < 0.17
               , stm                  >= 2.5  && < 2.6
               , text                 >= 1.2  && < 1.3
               , text-icu             >= 0.7  && < 0.8
               , time                 >= 1.8  && < 2.0
               , unordered-containers >= 0.2  && < 0.3
               , uuid                 >= 1.3  && < 1.4
               , yaml                 >= 0.11 && < 0.12
               , zxcvbn-hs            >= 0.3  && < 0.4

  mixins: base hiding (Prelude)
        , fused-effects-relude (FusedRelude as Prelude)

--------------------------------------------------------------------------------
library
  import: options, dependencies
  hs-source-dirs: src
  exposed-modules:
    Sthenauth.Core.Account
    Sthenauth.Core.Address
    Sthenauth.Core.Admin
    Sthenauth.Core.AuthN
    Sthenauth.Core.Bearer
    Sthenauth.Core.Capabilities
    Sthenauth.Core.Config
    Sthenauth.Core.Crypto
    Sthenauth.Core.CurrentUser
    Sthenauth.Core.Database
    Sthenauth.Core.Email
    Sthenauth.Core.Encoding
    Sthenauth.Core.Error
    Sthenauth.Core.Event
    Sthenauth.Core.EventDetail
    Sthenauth.Core.HTTP
    Sthenauth.Core.Logger
    Sthenauth.Core.Maintenance
    Sthenauth.Core.Policy
    Sthenauth.Core.Provider
    Sthenauth.Core.Public
    Sthenauth.Core.Remote
    Sthenauth.Core.Session
    Sthenauth.Core.Site
    Sthenauth.Core.URL
    Sthenauth.Core.Username

    Sthenauth.Providers.Types
    Sthenauth.Providers.OIDC
      Sthenauth.Providers.OIDC.Known
      Sthenauth.Providers.OIDC.Public
      Sthenauth.Providers.OIDC.Cookie
      Sthenauth.Providers.OIDC.Token
      Sthenauth.Providers.OIDC.AuthN
      Sthenauth.Providers.OIDC.Provider
      Sthenauth.Providers.OIDC.Account
    Sthenauth.Providers.Local
      Sthenauth.Providers.Local.Login
      Sthenauth.Providers.Local.Password
      Sthenauth.Providers.Local.Account
      Sthenauth.Providers.Local.Provider

    Sthenauth.Effect
      Sthenauth.Effect.Algebra
      Sthenauth.Effect.Boot
      Sthenauth.Effect.Carrier
      Sthenauth.Effect.Runtime
  other-modules:
    Paths_sthenauth

--------------------------------------------------------------------------------
test-suite test
  import: options, dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: sthenauth
               , tasty            >= 1.1  && < 1.3
               , tasty-hunit      >= 0.10 && < 0.11

  other-modules:
    EmailTest
